frontend/tests/cases/negative/interfaces/name-clash/nameClashDuplicateFunInInterface.gr
-- we have a duplicate signature for 'simple'
interface Simple a where
  simple : a;
  simple : a -> a
